--- a/lua/plugins/snippets/package.json
+++ b/lua/plugins/snippets/package.json
@@ -4,9 +4,9 @@
     "snippets": [
       {
         "language": [
-          "cpp"
+          "all"
         ],
-        "path": "./test.json"
+        "path": "./cpp.json"
       }
     ]
   }
