Configuration for Terminator

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,10 +9,7 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-set-option -g status-position top
-set -g default-terminal "tmux-256color"
-set -g default-terminal "screen-256color"
-
+set -g status-position top
 set -g @plugin "arcticicestudio/nord-tmux"
 
 set -g @plugin 'tmux-plugins/tpm'
@@ -21,5 +18,3 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run '~/.tmux/plugins/tpm/tpm'
-
-# set -g status-style bg=default
