New Configuration ended

--- a/nvim/lua/plugins/snippets/package.json
+++ b/nvim/lua/plugins/snippets/package.json
@@ -4,9 +4,15 @@
     "snippets": [
       {
         "language": [
-          "all"
+          "cpp"
         ],
         "path": "./cpp.json"
+      },
+      {
+        "language": [
+          "qml"
+        ],
+        "path": "./qml.json"
       }
     ]
   }
