Implemented configuration to develop on c# Changed leader keybinding of tmux Configured ghostty to run tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,10 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+unbind C-b
+set-option -g prefix M-f
+bind M-f send-prefix
+
 set -g default-terminal "$TERM"
 set -ag terminal-overrides ",$TERM:Tc"
 
