--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,11 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+bind -n M-h resize-pane -L 5
+bind -n M-l resize-pane -R 5
+bind -n M-k resize-pane -U 5
+bind -n M-j resize-pane -D 5
+
 set -g status-position top
 set -g @plugin "arcticicestudio/nord-tmux"
 
